[package]
name = "wifi-ctrl"
version = "0.3.0"
edition = "2021"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
description = "Tokio-based runtimes for communicating with hostapd and wpa-supplicant"
license = "Apache-2.0"
repository = "https://github.com/novalabsxyz/wifi-ctrl"
readme = "README.md"
keywords = ["hostapd", "wpa-supplicant", "wpa_supplicant", "wpa-cli", "wifi"]
rust-version = "1.64"

[dependencies]
hex = "0.4"
log = { version = "0.4" }
serde =  {version = "1", features = ["derive"] }
thiserror = "1"
tempfile = "3"
tokio = { version = "1.30", default-features = false, features = ["net", "sync", "macros", "time"] }

[dev-dependencies]
env_logger = "0.11"
network-interface = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "io-util"] }
tokio-util  ={ version = "0.7", features = ["codec"] }
futures = "0.3"

[lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"
